src/components/stage-selector/stage-selector.css
@import "../../css/units.css";
@import "../../css/colors.css";

$header-height: calc($stage-menu-height - 2px);

.stage-selector {
    position: relative; /* for the child element border */
    height: 100%;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    background-color: white;
    color: #575e75;
    border-top-left-radius: $space;
    border-top-right-radius: $space;
    border-color: #dbdbdb;
    border-width: 1px;
    border-style: solid;
    border-bottom: 0;
    cursor: pointer;
    transition: border-color 0.25s ease-out, box-shadow 0.25s ease-out;
}

.stage-selector:hover, .stage-selector.is-selected {
    border-color: $motion-primary;
    box-shadow: 0px 0px 0px 3px $motion-transparent;
}

.header {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: $header-height;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    background-color: white;
    color: #575e75;
    border-top-left-radius: $space;
    border-top-right-radius: $space;
    border-bottom: 1px solid #eaeaea;
}

.header-title {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 0.625rem;
    font-weight: bold;
    color: #575e75;

    /* @todo: make this a mixin for all UI text labels */
    user-select: none;
}

.body {
    justify-content: space-around;
    height: calc(100% - $header-height);
    background-color: #f9f9f9;
}

.count {
    padding: 0.3rem 0.75rem;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 0.625rem;
    color: #575e75;
    background: white;
    border: 1px solid #eaeaea;
    border-radius: 0.25rem;
    user-select: none;
}

.label {
    margin: 0.75rem 0 0.25rem;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 0.6rem;
    color: #575e75;
    user-select: none;
}

.flex-wrapper {
    display: flex;
    flex-direction: column; /* makes rows */
    align-items: center;
    overflow: hidden;
}

.costume-canvas {
    display: block;
    width: 100%;
    user-select: none;
    border-bottom: 1px solid #eaeaea;
}

.add-button {
    font-size: 0.55rem;
    font-weight: bold;
    text-align: center;
    position: absolute;
    bottom: 0.5rem;
    left: 0.25rem;
}

